# muscad

./: .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
examples/: drying_rack_fix.py  handle_cap.py  infinity_cube.py  knob.py  lauburu.py  lauburu.stl  migo_link.py  muscad_printer.py  numbers.py  raspberry_pi4_case.py  sd_usb_holder.py  tube_corner.py
examples/ender3v3ke/: spool_clamp.py
src/muscad/: __init__.py  base.py  color.py  helpers.py  part.py  point.py  primitives.py  transformations.py
src/muscad/utils/: __init__.py  barrel.py  fillet.py  shapes.py  stack.py  star.py  surface.py  tube.py  volume.py
src/muscad/vitamins/: bearings.py  belt.scad  belts.py  boards.py  bolts.py  brackets.py  bushing_linear_bearing.scad  cable_chain.py  cable_chain_link.scad  endstops.py  extruders.py  extrusions.py  fans.py  gears.py  mechanical_endstop_on_pcb.scad  mechanical_switch_endstop.scad  optical_endstop.scad  pulleys.py  rods.py  steppers.py  test.scad  threads.py
tests/: conftest.py  test_base.py  test_part.py  test_transformations.py  utils.py
tests/target_scad_files/: bevel_gears_pair.scad  gear.scad
tests/test_utils/: test_fillet_chamfer.py  test_shape.py  test_surface.py  test_volume.py
tests/vitamins/: __init__.py  test_bearings.py  test_belts.py  test_boards.py  test_brackets.py  test_cable_chain.py  test_endstops.py  test_extruders.py  test_extrusion.py  test_fans.py  test_gear.py  test_pulleys.py
